syntax = "proto3";

package aiorder;

import "order.proto";

option go_package = "/aiorder";

// AI订单服务
service AIOrderService {
  // 查询订单推荐
  rpc QueryOrder(QueryOrderReq) returns (QueryOrderResp) {}
  // 自动下单
  rpc SimulateOrder(SimulateOrderReq) returns (SimulateOrderResp) {}
}

// 查询订单请求
message QueryOrderReq {
  uint32 user_id = 1;     // 用户ID
  string content = 2;     // 用户文本内容
}

// 查询订单响应
message QueryOrderResp {
  string result = 1;      // 查询结果
}

// 模拟下单请求
message SimulateOrderReq {
  uint32 user_id = 1;
  string user_currency = 2;

  order.Address address = 3;
  string email = 4;
  repeated order.OrderItem order_items = 5;
}

// 模拟下单响应
message SimulateOrderResp {
  string order_id = 1;    // 订单ID
}