syntax = "proto3";

package product;

option go_package = "/product";

service ProductCatalogService {
  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {}
  rpc GetProduct(GetProductReq) returns (GetProductResp) {}
  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp) {}
  rpc CreateProduct(CreateProductReq) returns (CreateProductResp) {}
  rpc EditProduct(EditProductReq) returns (EditProductResp) {}
  rpc DeleteProduct(DeleteProductReq) returns (DeleteProductResp) {}
}

message ListProductsReq {
  int32 page = 1;
  int64 pageSize = 2;

  string categoryName = 3;
}

// 定义商品状态枚举
enum ProductStatus {
  PRODUCT_STATUS_UNSPECIFIED = 0;  // protobuf建议枚举第一个值为0
  PRODUCT_STATUS_ON_SALE = 1;      // 上架
  PRODUCT_STATUS_OFF_SALE = 2;     // 下架  
  PRODUCT_STATUS_DELETED = 3;      // 删除
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  int32 stock = 6;
  int32 soldcount = 7;

  ProductStatus status = 8;  // 使用枚举类型
  bool ishot = 9;
  bool isnew = 10;
  bool isrecommend = 11;

  repeated string categories = 12;
}

message ListProductsResp { repeated Product products = 1; }

message GetProductReq { uint32 id = 1; }

message GetProductResp { Product product = 1; }

message SearchProductsReq { 
  string query = 1; 

  int32 page = 2;
  int64 pageSize = 3;
}

message SearchProductsResp { repeated Product results = 1; }

message CreateProductReq {
  string name = 1;
  string description = 2;
  string picture = 3;
  float price = 4;

  int32 stock = 5;
  int32 soldcount = 6;

  ProductStatus status = 7;
  bool ishot = 8;
  bool isnew = 9;
  bool isrecommend = 10;

  repeated string categories = 11;
}

message CreateProductResp {
  bool success = 1;         // 创建是否成功
  uint32 product_id = 2;    // 创建的商品ID
}

message EditProductReq {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  int32 stock = 6;
  int32 soldcount = 7;

  ProductStatus status = 8;
  bool ishot = 9;
  bool isnew = 10;
  bool isrecommend = 11;

  repeated string categories = 12;
}

message EditProductResp {
  bool success = 1;         // 编辑是否成功
}

message DeleteProductReq { uint32 id = 1; }

message DeleteProductResp {
  bool success = 1;         // 删除是否成功
}